# Kuru_Mac

./: .gitignore  CMT_explicit.jl  FEMSolver.py  LICENSE  PostProcess.py  QuarterRingShell.geo  QuarterRingShell.msh  Quarter_Cylinder.geo  Quarter_Cylinder.msh  Quarter_Ring.geo  Quarter_Ring.msh  README.md  __init__.py  deposition_stretch.jl  holzapfel.jl  homo_CMT_explicit.py  neo-hooke.jl  newton_raphson.jl  setup.py  tube0.f90
simpact/: CMakeLists.txt
simpact/backup/: ifport.f90
simpact/backup/proyects/: PG-solid.xlsx
simpact/backup/proyects/curvas_project/: curvas.sln  curvas.vfproj
simpact/backup/proyects/stp_project/: stp.sln  stp.txt  stp.vfproj
simpact/backup/proyects/v720_project/: fuentes.odt  v720p.sln  v720p.u2d  v720p.vfproj
simpact/backup/stp_librerias/: gidpost.lib
simpact/lib/: Makefile  cmake_install.cmake  cont_db.mod  data_db.mod  dflib.mod  flc_db.mod  param_db.mod
simpact/src/curvas/: CMakeLists.txt  histd.f90  histd.f90~  history.f90  history.f90~  history.txt  stacpvt.f90  stacpvt.f90~  stadisp.f90  stadisp.f90~  stastre.f90  stastre.f90~  statcfr.f90  statcfr.f90~
simpact/src/stampact/: CMakeLists.txt  bonds_db.f90  cont_db.f90  data_db.f90  dflib.f90  flc_db.f90  param_db.f90  stampact.txt
simpact/src/stp/: CMakeLists.txt  CMakeLists.txt~  Prgi09.f90  averag.f90  aves2d.f90  aves3d.f90  aves3d.f90~  aveshl.f90  axes12.f90  axes14.f90  axes25.f90  bgraph.f90  cab_gid.f90  cab_gid.h  cab_gid_bin.f90  cab_gid_bin.h  ch.f90  cpdir3d.f90  cpdirt.f90  cpdirt.f90~  cpdirt.h  cpdirt.h~  elmdat.f90  findinv.f90  findinv.h  fldcv.f90  gaun12.f90  gaus12.f90  gaus12.f90~  gausn1.f90  gausn2.f90  gausn3.f90  gausn5.f90  gausn6.f90  gausn8.f90  gausn9.f90  gauss1.f90  gauss2.f90  gauss3.f90  gauss3.f90~  (+130 more)
simpact/src/v720/: CMakeLists.txt  force3.fi
simpact/src/v720/auxil/: angeul.f90  det2.f90  ensvec.f90  inc_mint.f90  inc_vcha.f90  inc_vint.f90  inc_vrea.f90  inttoch.f90  jacob3.f90  lumas5.f90  number.f90  princi.f90  proma1.f90  proma2.f90  proma3.f90  proma4.f90  rembln.f90  shape3.f90  shape5.f90  shape9.f90  sortnd.f90  surf03.f90  surf05.f90  vecasi.f90  vecpro.f90  vecuni.f90  vstru_db.f90
simpact/src/v720/beame/: commv8.fi  dumpi8.fi  elmda8.fi  inpda8.f90  istg18.fi  nodxy8.fi  outdy8.fi  rare18.fi  resta8.fi  resvp8.fi  updlo8.fi
simpact/src/v720/cont3/: cdump3.fi  celmn3p.fi  chksu3.fi  cinpu3.fi  cont3_db.f90  cscf3a.fi  csinp3.fi  csrfc3.fi  cupdl3.fi  force3.fi~  getnod.f90  mastd3.fi  mdsur3.fi  projt3.fi  projtr.fi  prsur3.fi  upndc3.fi
simpact/src/v720/drawb/: chqua0.fi  db3res.fi  db3udl.fi  inidb0.fi  inidb1.fi  linint.f90  linint.h  projec.fi  rsdbe3.fi  updnd3.fi  wrtdb1.fi  wrtdb2.fi  zcoord.h
simpact/src/v720/inclu/: actrot.h  closef.h  coords.h  core06ps.h  corr05.h  corr14_79.h  corr14_90.h  corr19.h  corr20.h  deriv6.h  ensvec.h  inc_mint.h  inc_mrea.h  inc_vint.h  lcasy6.h  nearsa.h  nodn07.h  rdhyd2d.h  rdreal.h  rdsegs.h  rubber2d.h  rubber3d.h  rubberps.h  sortnd.h  stra14.h  stre02_1.h  stre02_6.h  stre14.h  surf03.h  surf05.h  sxplit.h  ubicmx.h  ud_solid_3.h  updnd3.h  vecuni.h  wrtrpt.h
simpact/src/v720/input/: defnam.f90  idntdt.f90  lispa0.f90  runen23.f90
simpact/src/v720/lbst/: bmem14.f90  elem14.f90  projq4.f90  resv_p0.fpp  resv_p2.fpp
simpact/src/v720/loads/: Loadpl.f90  aplfol.f90  aplfol.h  dedge0.h  dsurf1.h  loa_db.f90  pyrmd4.f90  rdfoll.f90  rdhyd2d.f90  wrtfl0.f90  wrtfl1.f90
simpact/src/v720/mainp/: actcd.f90  actrot.f90  arisfi.f90  arisfi.h  arisi0.f90  beginp.f90  byebye.f90  ch_d2v.f90  closef.f90  conini.f90  conta3.h  coract.f90  coract.h  ctrl_db.f90  damp_db.f90  dampin.f90  dampin.h  data_inp.f90  delnod.f90  dumpin.f90  elem04.h  elem18.h  elemnt.f90  elemt8.h  endstr.f90  esets_db.f90  explit.f90  explit.h  fixdpd.f90  fixdpd.h  fixval.h  gvar_db.f90  histor.f90  impfix.f90  incdlt.f90  inisld.f90  initial_comp.f90  inpd04.h  inpd10.h  inpd13.h  (+46 more)
simpact/src/v720/matdb/: conv_smeas.fi  corr17.f90  corr20_i.f90  curaux.fi  flc_db.f90  isoha14.f90  mat_pla.fi  minp_01.fi  minp_06.fi  minp_20.fi  mtype_c.fi  posin1.f90  rdmpcr.fi  rubber1d.f90  rubberps.f90  sc_beam.fi  sc_truss.fi  stre14.f90  ud_corr_30.f90  ud_sh2_out.f90  wrt_mat_db.fi
simpact/src/v720/nbst/: axep13.fi  bbra13.fi  bfle13.fi  bmem13.fi  boun13.fi  delt13.fi  dump13.fi  eige17.f90  ele13_db.f90  gaus13.fi  inig13.fi  inpd13.f90  nods13.fi  outd13.fi  rest13.fi  resv13.fi  stra13.fi  surf13.fi
simpact/src/v720/prism/: acvd16.fi  bmat16.fi  bmat16q.fi  comm16.fi  dump16.fi  elmd16.fi  inpd16.f90  jacob16.fi  lcsy16.fi  luma16.fi  outd16.fi  rest16.fi  resv16.fi
simpact/src/v720/remesh/: del_e_mrea.h  deloln.h  dispcrv.h  get_ifxb.f90  mshcri.f90  nodfnd.f90  plines.f90  pregid.h  qloop.h  rdmeshmo.f90  rnmesh.h  solrem.f90  sortlb.f90  transf.f90  transf.h  verifd.f90  verifd.h
simpact/src/v720/rigid/: acvd10.fi  comm10.fi  ele10_db.f90  inpd10.f90  poin10.fi  rearb0.fi  rest10.fi  rigbdc.f90  surf10.fi  tlma10.fi  tres10.fi  updl10.fi
simpact/src/v720/scpr03/: spr_type_db.f90  trian.f90
simpact/src/v720/solag/: acvd18.fi  bsma18.fi  delt18.fi  eige18.fi  elmd18.fi  expo18.fi  gaus18.fi  impo18.fi  inpd18.f90  resv18.fi  rubber3dn.fi  secd18.fi  surf18.fi
simpact/src/v720/solve/: colsol.f90  ensmat.f90  lump_mass.f90  renum0.f90  renum1.f90  renum2.f90  renum3.f90  renum3.h  renum4.f90  renum4.h  renumn.f90  ubicmx.f90
simpact/src/v720/spot/: acvdf1.fi  commv1.fi  ele01_db.f90  elemt1.f90  elmda1.fi  gauss1.fi  lumas1.fi  masel1.fi  resvp1.fi  updlo1.fi
simpact/src/v720/ssolag/: Inpd04.f90  acvd04.fi  bmat04q.fi  bsma04.fi  comm04.fi  dump04.fi  ele04_db.f90  elem04.f90  elmd04.fi  expo04.fi  lcsy04.fi  load04.fi  (+4 more)
vulcan/: CMakeLists.txt
vulcan/.svn/: wc.db
vulcan/debian/: README.source  changelog  docs  postinst  rules  vulcan.substvars  watch.ex
vulcan/include/: mkl_pardiso.f77
vulcan/scripts/: infoserver.py  vulcan  vulcan.py
vulcan/src/VulcanGui/: VulcanGui.pro  main.cpp  socketinstance.cpp  socketinstance.h  vulcangui.h  vulcangui.ui
vulcan/src/interexo/: interexo.f
(+1373 files in other folders)
