file(GLOB OBJECT_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
     "${CMAKE_CURRENT_SOURCE_DIR}/*.f")
 
list(REMOVE_ITEM OBJECT_LIST "addi_om.f")
list(REMOVE_ITEM OBJECT_LIST "addi_oms.f")
list(REMOVE_ITEM OBJECT_LIST "addi_omt.f")
list(REMOVE_ITEM OBJECT_LIST "auxl_om.f")
list(REMOVE_ITEM OBJECT_LIST "auxl_oms.f")
list(REMOVE_ITEM OBJECT_LIST "auxl_omt.f")
list(REMOVE_ITEM OBJECT_LIST "gend_om.f")
list(REMOVE_ITEM OBJECT_LIST "gend_oms.f")
list(REMOVE_ITEM OBJECT_LIST "gend_omt.f")
list(REMOVE_ITEM OBJECT_LIST "inpo_om.f")
list(REMOVE_ITEM OBJECT_LIST "inpo_oms.f")
list(REMOVE_ITEM OBJECT_LIST "inpo_omt.f")
list(REMOVE_ITEM OBJECT_LIST "inte_om.f")
list(REMOVE_ITEM OBJECT_LIST "inte_oms.f")
list(REMOVE_ITEM OBJECT_LIST "inte_omt.f")
list(REMOVE_ITEM OBJECT_LIST "nuec_om.f")
list(REMOVE_ITEM OBJECT_LIST "nued_om.f")
list(REMOVE_ITEM OBJECT_LIST "nuee_om.f")
list(REMOVE_ITEM OBJECT_LIST "nuef_om.f")
list(REMOVE_ITEM OBJECT_LIST "para_om.f")
list(REMOVE_ITEM OBJECT_LIST "para_oms.f")
list(REMOVE_ITEM OBJECT_LIST "para_omt.f")
list(REMOVE_ITEM OBJECT_LIST "prob_om.f")
list(REMOVE_ITEM OBJECT_LIST "prob_oms.f")
list(REMOVE_ITEM OBJECT_LIST "prob_omt.f")
list(REMOVE_ITEM OBJECT_LIST "vul-m.f")
list(REMOVE_ITEM OBJECT_LIST "vul-s.f")
list(REMOVE_ITEM OBJECT_LIST "vul-t.f")
list(REMOVE_ITEM OBJECT_LIST "vul-tm.f")
list(REMOVE_ITEM OBJECT_LIST "vul-ts.f")
list(REMOVE_ITEM OBJECT_LIST "vul-tms.f")


foreach (p ${OBJECT_LIST})
    GET_FILENAME_COMPONENT(q ${p} NAME_WE)
    list(APPEND NAME_LIST ${q})
endforeach (p)

include_directories(${MKL_INCLUDE_DIRS})
link_directories(${MKL_LIBRARIES})

add_executable ("Vulcan-m.O2" vul-m.f ${OBJECT_LIST})
add_executable ("Vulcan-s.O2" vul-s.f ${OBJECT_LIST})
add_executable ("Vulcan-t.O2" vul-t.f ${OBJECT_LIST})
add_executable ("Vulcan-tm.O2" vul-tm.f ${OBJECT_LIST})
add_executable ("Vulcan-ts.O2" vul-ts.f ${OBJECT_LIST})
add_executable ("Vulcan-tms.O2" vul-tms.f ${OBJECT_LIST})

target_link_libraries("Vulcan-m.O2" mkl_gf_lp64 mkl_core mkl_gnu_thread)
target_link_libraries("Vulcan-s.O2" mkl_gf_lp64 mkl_core mkl_gnu_thread)
target_link_libraries("Vulcan-t.O2" mkl_gf_lp64 mkl_core mkl_gnu_thread)
target_link_libraries("Vulcan-tm.O2" mkl_gf_lp64 mkl_core mkl_gnu_thread)
target_link_libraries("Vulcan-ts.O2" mkl_gf_lp64 mkl_core mkl_gnu_thread)
target_link_libraries("Vulcan-tms.O2" mkl_gf_lp64 mkl_core mkl_gnu_thread)

install(TARGETS "Vulcan-m.O2" DESTINATION "/usr/bin/vulcan-bin")
install(TARGETS "Vulcan-s.O2" DESTINATION "/usr/bin/vulcan-bin")
install(TARGETS "Vulcan-t.O2" DESTINATION "/usr/bin/vulcan-bin")
install(TARGETS "Vulcan-tm.O2" DESTINATION "/usr/bin/vulcan-bin")
install(TARGETS "Vulcan-ts.O2" DESTINATION "/usr/bin/vulcan-bin")
install(TARGETS "Vulcan-tms.O2" DESTINATION "/usr/bin/vulcan-bin")
